ctags: lower the tags priorities

The ctags highlight tags should not overwrite
the ones set by GtkSourceView.

https://bugzilla.gnome.org/show_bug.cgi?id=756699